welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:6: error: value && is not a member of Int
  if (a%30 && a%5==0)
           ^